# moto_sim

./: Cargo.toml  README.md  rustfmt.toml
examples/: example1.rs
src/: lib.rs  util.rs
src/controller/: mod.rs
src/controller/observer/: flux_observer.rs  mod.rs  sensor_observer.rs
src/controller/power_bridge/: ideal_power_bridge.rs  mod.rs  two_level_bridge.rs
src/model/: fan.rs  mod.rs
src/motion/: ideal_motion_load.rs  mod.rs
src/motor/: mod.rs  pmsm.rs
src/simulation/: mod.rs  noise.rs
src/simulation/controller/: mod.rs
src/simulation/controller/current_regulator/: mod.rs  three_phase_pi_current_regulator.rs
src/simulation/controller/inline_tune/: mod.rs
src/simulation/controller/observer/: ds_observer.rs  flux_observer.rs  grad_observer.rs  mix_observer.rs  mod.rs  mp_observer.rs  sensor_observer.rs
src/simulation/motion_load/: ideal_motion_load.rs  mod.rs
src/simulation/motor/: mod.rs  pmsm.rs
src/simulation/power_bridge/: ideal_power_bridge.rs  mod.rs  two_level_power_bridge.rs
src/ui/: font.rs
